# run-elmer

./: LICENSE  Makefile  README.md  examples.ipynb  readme.ipynb  readme.md  readme.sh  setup.cfg  test.py
.github/workflows/: ci.yml
elmer/: __init__.py  case.py  mesh.py
elmer/runners/: docker.py
run_elmer/: __init__.py  export.py  run.py
run_elmer/runners/: docker.py
tests/: test_mesh.py
