[metadata]
name = run_elmer
version = 0.1.0
author = Tom Gustafsson
description = Run Elmer FEM from Python
url = https://github.com/kinnala/elmer-runner
project_urls =
    Code=https://github.com/kinnala/elmer-runner
    Issues=https://github.com/kinnala/elmer-runner/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy
    scikit-fem
    meshio>=4.0.4
    six  # due to missing dependency in "docker" package
    docker
python_requires = >=3.7
setup_requires =
    setuptools>=42
    wheel